roles/general/templates/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

#China
-A INPUT -s 120.192.0.0/11 -j DROP
-A INPUT -s 222.184.0.0/11 -j DROP
-A INPUT -s 92.63.104.202 -j DROP

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#ssh
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

#web
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT

-A INPUT -j DROP

COMMIT
